[tool.poetry]
name = "codex-ast-mapper"
version = "0.2.0"
description = "Repository Intelligence Engine — Tree-sitter AST maps, graphs, and LLM context packs"
authors = ["Codex AST Mapper Contributors"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "src" }]
keywords = ["ast", "tree-sitter", "llm", "cli", "code-map"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[tool.poetry.scripts]
codex-ast-mapper = "src.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.15.1" }
tree-sitter = "^0.24.0"
tree-sitter-python = "^0.23.6"
tree-sitter-typescript = "^0.23.2"
tree-sitter-go = "^0.23.4"
tiktoken = "^0.8.0"
pathspec = "^0.12.1"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
mypy = "^1.14.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "ANN",
    "RUF",
]
ignore = [
    "ANN401",
    "B008",  # Typer Option()/Argument() defaults are intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
